Prueba2_P1_2021/tests/build/expr_parser.output
Terminals unused in grammar

    TKEOF


Grammar

    0 $accept: input $end

    1 input: stmts eolist

    2 eolist: EOL
    3       | %empty

    4 stmts: stmts EOL stmt
    5      | stmt

    6 stmt: "print" expr
    7     | "id" "=" expr

    8 expr: expr "+" term
    9     | term

   10 term: term "*" fact
   11     | fact

   12 fact: "num"
   13     | "(" expr ")"
   14     | "id"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "id" <str_t> (258) 7 14
    "num" <number_t> (259) 12
    "(" (260) 13
    ")" (261) 13
    "+" (262) 8
    "*" (263) 10
    EOL (264) 2 4
    TKEOF (265)
    "=" (266) 7
    "print" (267) 6


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    input (14)
        on left: 1
        on right: 0
    eolist (15)
        on left: 2 3
        on right: 1
    stmts (16)
        on left: 4 5
        on right: 1 4
    stmt (17)
        on left: 6 7
        on right: 4 5
    expr <number_t> (18)
        on left: 8 9
        on right: 6 7 8 13
    term <number_t> (19)
        on left: 10 11
        on right: 8 9 10
    fact <number_t> (20)
        on left: 12 13 14
        on right: 10 11


State 0

    0 $accept: . input $end
    1 input: . stmts eolist
    4 stmts: . stmts EOL stmt
    5      | . stmt
    6 stmt: . "print" expr
    7     | . "id" "=" expr

    "id"     shift, and go to state 1
    "print"  shift, and go to state 2

    input  go to state 3
    stmts  go to state 4
    stmt   go to state 5


State 1

    7 stmt: "id" . "=" expr

    "="  shift, and go to state 6


State 2

    6 stmt: "print" . expr
    8 expr: . expr "+" term
    9     | . term
   10 term: . term "*" fact
   11     | . fact
   12 fact: . "num"
   13     | . "(" expr ")"
   14     | . "id"

    "id"   shift, and go to state 7
    "num"  shift, and go to state 8
    "("    shift, and go to state 9

    expr  go to state 10
    term  go to state 11
    fact  go to state 12


State 3

    0 $accept: input . $end

    $end  shift, and go to state 13


State 4

    1 input: stmts . eolist
    2 eolist: . EOL
    3       | . %empty  [$end]
    4 stmts: stmts . EOL stmt

    EOL  shift, and go to state 14

    $default  reduce using rule 3 (eolist)

    eolist  go to state 15


State 5

    5 stmts: stmt .

    $default  reduce using rule 5 (stmts)


State 6

    7 stmt: "id" "=" . expr
    8 expr: . expr "+" term
    9     | . term
   10 term: . term "*" fact
   11     | . fact
   12 fact: . "num"
   13     | . "(" expr ")"
   14     | . "id"

    "id"   shift, and go to state 7
    "num"  shift, and go to state 8
    "("    shift, and go to state 9

    expr  go to state 16
    term  go to state 11
    fact  go to state 12


State 7

   14 fact: "id" .

    $default  reduce using rule 14 (fact)


State 8

   12 fact: "num" .

    $default  reduce using rule 12 (fact)


State 9

    8 expr: . expr "+" term
    9     | . term
   10 term: . term "*" fact
   11     | . fact
   12 fact: . "num"
   13     | . "(" expr ")"
   13     | "(" . expr ")"
   14     | . "id"

    "id"   shift, and go to state 7
    "num"  shift, and go to state 8
    "("    shift, and go to state 9

    expr  go to state 17
    term  go to state 11
    fact  go to state 12


State 10

    6 stmt: "print" expr .  [$end, EOL]
    8 expr: expr . "+" term

    "+"  shift, and go to state 18

    $default  reduce using rule 6 (stmt)


State 11

    9 expr: term .  [$end, ")", "+", EOL]
   10 term: term . "*" fact

    "*"  shift, and go to state 19

    $default  reduce using rule 9 (expr)


State 12

   11 term: fact .

    $default  reduce using rule 11 (term)


State 13

    0 $accept: input $end .

    $default  accept


State 14

    2 eolist: EOL .  [$end]
    4 stmts: stmts EOL . stmt
    6 stmt: . "print" expr
    7     | . "id" "=" expr

    "id"     shift, and go to state 1
    "print"  shift, and go to state 2

    $default  reduce using rule 2 (eolist)

    stmt  go to state 20


State 15

    1 input: stmts eolist .

    $default  reduce using rule 1 (input)


State 16

    7 stmt: "id" "=" expr .  [$end, EOL]
    8 expr: expr . "+" term

    "+"  shift, and go to state 18

    $default  reduce using rule 7 (stmt)


State 17

    8 expr: expr . "+" term
   13 fact: "(" expr . ")"

    ")"  shift, and go to state 21
    "+"  shift, and go to state 18


State 18

    8 expr: expr "+" . term
   10 term: . term "*" fact
   11     | . fact
   12 fact: . "num"
   13     | . "(" expr ")"
   14     | . "id"

    "id"   shift, and go to state 7
    "num"  shift, and go to state 8
    "("    shift, and go to state 9

    term  go to state 22
    fact  go to state 12


State 19

   10 term: term "*" . fact
   12 fact: . "num"
   13     | . "(" expr ")"
   14     | . "id"

    "id"   shift, and go to state 7
    "num"  shift, and go to state 8
    "("    shift, and go to state 9

    fact  go to state 23


State 20

    4 stmts: stmts EOL stmt .

    $default  reduce using rule 4 (stmts)


State 21

   13 fact: "(" expr ")" .

    $default  reduce using rule 13 (fact)


State 22

    8 expr: expr "+" term .  [$end, ")", "+", EOL]
   10 term: term . "*" fact

    "*"  shift, and go to state 19

    $default  reduce using rule 8 (expr)


State 23

   10 term: term "*" fact .

    $default  reduce using rule 10 (term)
